@@ -323,6 +323,11 @@ ENDIF(CMAKE_USE_WIN32_THREADS_INIT)
 FIND_PACKAGE(SleepFunction)
 FIND_PACKAGE(SelectArgtypes)
 
+IF(CMAKE_SYSTEM MATCHES CYGWIN)
+  CHECK_INCLUDE_FILE_DEFINE(stropts.h HAVE_STROPTS_H)
+  CHECK_INCLUDE_FILE_DEFINE(sys/ioctl.h HAVE_SYS_IOCTL_H)
+ENDIF(CMAKE_SYSTEM MATCHES CYGWIN)
+
 # sound backends
 FIND_PACKAGE(PkgConfig)
 
